<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OA-Index</string>
    <string name="hello_world">Hello world!</string>
	<string name="hello">Hello World</string>
    
	<string name="receiver">收件人</string>
	<string name="sender">发件人</string>
	<string name="sendtime">发送时间</string>
	<string name="file">附件</string>
	<string name="searchfile">浏览</string>
	<string name="messagecontent">填写信息内容</string>
	<string name="messagetitle">邮件标题</string>
	<string name="title">主题</string>
	
	
	<string name="action_setting">设置</string>
	
	<string name="activity_mycenter">个人中心</string>
    
    <string name="commection">信息沟通</string>
    <string name="notification">通知通告</string>
    <string name="worktask">工作任务</string>
    <string name="workreminder">工作提醒</string>
    <string name="knowledge">最新知识</string>
    
    <string name="action_return">返回</string>
    <string name="action_menu">菜单</string>
    <string name="action_startmenu">开始菜单</string>
    
    <string name="activity_noticenew">发布通知</string>
    <string name="activity_noticedraft">通知草稿</string>
    <string name="activity_noticelist">通知列表</string>
    <string name="activity_noticeoutbox">通知已发</string>
    
    <string name="activity_newmessage">新信息</string>
    <string name="action_save">存草稿</string>
    <string name="action_refresh">刷新</string>
    <string name="action_send">发送</string>
    <!-- 收件箱 -->
	<string name="activity_inbox">收件箱</string>
	<string name="action_select_unread">未读</string>
	<string name="action_select_read">已读</string>
	<string name="action_select_all">全部</string>
	<!-- 信息详情 -->
    <string name="activity_showmessage">信息详情</string>
    <string name="activity_draftmessageshow">草稿详情</string>
	<string name="action_reply">回复</string>
    <string name="action_transpond">转发</string>
    <string name="action_delete">删除</string>
    <string name="activity_contacts">联系人</string>
    <string name="activity_outbox">发件箱</string>
    <string name="activity_draft">草稿箱</string>
    <string name="activity_waste">回收箱</string>
    
    <!-- 请假条 -->
    <string name="activity_requestleave">请假条</string>
    <!-- 工作写实 -->
    <string name="activity_workrecord">工作写实</string>
    <!-- 计划总结 -->
    <string name="activity_plansummary">计划总结</string>
    <string name="activity_plannew">计划填写</string>
    <string name="activity_showknowledge">知识详情</string>
    <string name="timeout">连接超时，请重试</string>
    <string name="returnexit">再按一次退出程序</string>
    <string name="action_logout">注销</string>
</resources>
