<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!-- 收件箱 -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_select_unread"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_select_unread"/>
    <item
        android:id="@+id/action_select_read"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_select_read"/>
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_select_all"/>
	<item
        android:id="@+id/action_menu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_startmenu"/>
</menu>